updated the report

--- a/Project_Report.ipynb
+++ b/Project_Report.ipynb
@@ -32,7 +32,7 @@
    "id": "074127ed",
    "metadata": {},
    "source": [
-    "### عمر محمد حميس عبدالحليم 23011384"
+    "### عمر محمد خميس عبدالحليم 23011384"
    ]
   },
   {
@@ -60,11 +60,10 @@
    "source": [
     "## 📊 Datasets Used in This Project\n",
     "\n",
-    "We have worked on three datasets:\n",
+    "We have worked on two datasets:\n",
     "\n",
-    "- 🏪 **`coffee_shop_revenue`**: Used for evaluating the **Linear Regression** model.\n",
+    "- 🏪 **`coffee_shop_revenue`**: Used for evaluating the **Linear Regression** and **Polynomial Regression** models.\n",
     "- 🏥 **`healthcare_stroke_data`**: Used for evaluating the **Logistic Regression** model.\n",
-    "- 🏥 **`StudentsPerformance`**: Used for evaluating the **Polynomial Regression** model.\n",
     "\n",
     "___\n",
     "\n",
@@ -196,7 +195,7 @@
     "For each degree (2, 3, 4):\n",
     "1. **Feature Transformation**: Create polynomial features\n",
     "2. **Model Training**: Fit LinearRegression\n",
-    "3. **Prediction**: Generate train/test predictions\n",
+    "3. **Prediction**: Generate train/test predictions  \n",
     "4. **Visualization**: Actual vs Predicted plots\n",
     "5. **Evaluation**: Calculate MSE and R² scores\n",
     "___\n",
@@ -205,10 +204,16 @@
     "#### 🔢 Quantitative Metrics\n",
     "| Degree | Train R² | Test R² | Train MSE | Test MSE |\n",
     "|--------|----------|---------|-----------|----------|\n",
-    "| 2      | 0.8765   | 0.8621  | 0.0987    | 0.1032   |\n",
-    "| 3      | 0.8923   | 0.8514  | 0.0876    | 0.1075   |\n",
-    "| 4      | 0.9142   | 0.8327  | 0.0721    | 0.1159   |\n",
+    "| 2      | 0.8433   | 0.8313  | 149460.75 | 159642.79|\n",
+    "| 3      | 0.8551   | 0.8198  | 138920.42 | 167893.54|\n",
+    "| 4      | 0.8726   | 0.8024  | 125673.88 | 182456.17|\n",
     "\n",
+    "#### 📈 Key Observations:\n",
+    "- Best performer: **Degree 2** (Highest test R²: 0.8313)\n",
+    "- Overfitting signs: Degree 4 shows:\n",
+    "  - ↑ Train R² (0.8726) \n",
+    "  - ↓ Test R² (0.8024)\n",
+    "- MSE increases with degree complexity on test data\n",
     "\n",
     "___\n",
     "---\n",
@@ -274,6 +279,12 @@
     "---\n",
     "___\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c1f19969",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
